--- a/mods/detail-armor-bar-forge.pw.toml
+++ b/mods/detail-armor-bar-forge.pw.toml
@@ -1,6 +1,6 @@
 name = "Detail Armor Bar [Forge]"
 filename = "DetailArmorBar-2.6.2+1.18.2-forge.jar"
-side = "both"
+side = "client"
 
 [download]
 hash-format = "sha1"
