--- a/mods/forbidden-arcanus.pw.toml
+++ b/mods/forbidden-arcanus.pw.toml
@@ -1,13 +1,13 @@
 name = "Forbidden and Arcanus"
-filename = "forbidden_arcanus-1.18.2-2.0.0.jar"
+filename = "forbidden_arcanus-1.18.2-2.1.0-beta1.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "177fc95955cac5140c8664acf99883f3cf2fa377"
+hash = "63636a3a0b38a04dca6d1856c400789a8a10b071"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 3712899
+file-id = 3768779
 project-id = 309858
