--- a/mods/minecraft-comes-alive-reborn.pw.toml
+++ b/mods/minecraft-comes-alive-reborn.pw.toml
@@ -1,13 +1,13 @@
 name = "MCA Reborn [Fabric/Forge]"
-filename = "minecraft-comes-alive-7.2.1+1.18.2-forge.jar"
+filename = "minecraft-comes-alive-7.3.1-forge.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "81cd485b684ffa86d441fc5c58ac99cb2e8c8fc1"
+hash = "9b4880536159bde07a59ef89b169657c9148a0cf"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 3749234
+file-id = 3826447
 project-id = 535291
