--- a/mods/structurize.pw.toml
+++ b/mods/structurize.pw.toml
@@ -1,13 +1,13 @@
 name = "Structurize"
-filename = "structurize-1.18.2-1.0.399-RELEASE.jar"
+filename = "structurize-1.18.2-1.0.411-ALPHA.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "9c4b2c298506a7d7425dc559143cfe96a3375493"
+hash = "996da96400f348062738a12c963ff8e7ac8a40b7"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 3788552
+file-id = 3819014
 project-id = 298744
