--- a/mods/supermartijn642s-config-lib.pw.toml
+++ b/mods/supermartijn642s-config-lib.pw.toml
@@ -1,13 +1,13 @@
 name = "SuperMartijn642's Config Lib"
-filename = "supermartijn642configlib-1.0.9-mc1.18.jar"
+filename = "supermartijn642configlib-1.1.3-forge-mc1.18.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "75da279bf6f47be0b22433d19001f22c4578008d"
+hash = "d8c1059618a7d1799e50601d108c456fc02de998"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 3542143
+file-id = 3825116
 project-id = 438332
