--- a/mods/hexcasting.pw.toml
+++ b/mods/hexcasting.pw.toml
@@ -1,13 +1,13 @@
 name = "Hex Casting"
-filename = "hexcasting-1.18.2-0.8.3.jar"
+filename = "hexcasting-forge-1.18.2-0.9.0.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "d5f46eec15508a1ee5040cfbc51c23bfd7110b8c"
+hash = "98310d573b835af950c2b98f521173b060f8052e"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 3778676
+file-id = 3830039
 project-id = 569849
