--- a/mods/more-villagers.pw.toml
+++ b/mods/more-villagers.pw.toml
@@ -1,13 +1,13 @@
 name = "More Villagers"
-filename = "morevillagers-FORGE-1.18.2-3.2.0.jar"
+filename = "morevillagers-forge-1.18.2-3.3.0.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "8f64b49acc9dc927733a59fc1017385c380060f8"
+hash = "1731a22cb2f83154d3d01ab973be6f46d47b32dc"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 3696031
+file-id = 3831419
 project-id = 484954
