--- a/mods/strawgolem-reborn.pw.toml
+++ b/mods/strawgolem-reborn.pw.toml
@@ -1,13 +1,13 @@
-name = "Straw Golem Reborn - Forge"
-filename = "Strawgolem-forge-1.18.2-2.0.0a4.jar"
+name = "Straw Golem Rebaled - Forge"
+filename = "Strawgolem-forge-1.18.2-2.0.0b1.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "08116b8d96faa989d0d1608cbb5a11a79daa87fa"
+hash = "b800770522228817db037bf0a76166121e81e958"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 3827945
+file-id = 3832599
 project-id = 387580
