--- a/mods/minecraft-comes-alive-reborn.pw.toml
+++ b/mods/minecraft-comes-alive-reborn.pw.toml
@@ -1,13 +1,13 @@
 name = "MCA Reborn [Fabric/Forge]"
-filename = "minecraft-comes-alive-7.3.2-forge.jar"
+filename = "minecraft-comes-alive-7.3.3+1.18.2-forge.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "442767fdd72258388235c3c56955c1cdd7679513"
+hash = "02f3ea20dccbc91e9285062cd39b6fb03f62bb2f"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 3840318
+file-id = 3841723
 project-id = 535291
