--- a/mods/ecologics.pw.toml
+++ b/mods/ecologics.pw.toml
@@ -1,13 +1,13 @@
 name = "Ecologics"
-filename = "ecologics-FORGE-1.18.2-1.6.9.jar"
+filename = "ecologics-forge-1.18.2-1.7.1.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "983e14bbf35654820d49f83d8413dfcdf1948137"
+hash = "072ec477365c09312549c6a6c211e5bf36632b92"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 3827166
+file-id = 3850590
 project-id = 570463
